# thh-bgfx-debug

./: CMakeLists.txt  README.md  compile-shader.sh  configure.bat  configure.sh  run-clang-format.bat  run-clang-tidy.bat  thh-bgfx-debug-config.cmake.in
include/thh-bgfx-debug/: debug-circle.hpp  debug-color.hpp  debug-cube.hpp  debug-line.hpp  debug-quad-uv-dynamic.hpp  debug-quad-uv.hpp  debug-quad.hpp  debug-shader.hpp  debug-sphere.hpp  debug-triangle.hpp  debug-vertex-uv.hpp  debug-vertex.hpp
src/: debug-circle.cpp  debug-cube.cpp  debug-line.cpp  debug-quad-uv-dynamic.cpp  debug-quad-uv.cpp  debug-quad.cpp  debug-shader.cpp  debug-sphere.cpp  debug-triangle.cpp  debug-vertex-uv.cpp  debug-vertex.cpp
src/shader/instance/: fs_instance.bin.h  fs_instance.sc  vs_instance.bin.h  vs_instance.sc
src/shader/instance_uv/: fs_instance_uv.bin.h  varying.def.sc  vs_instance_uv.bin.h  vs_instance_uv.sc
src/shader/simple/: fs_simple.bin.h  vs_simple.bin.h  vs_simple.sc
src/shader/uv/: fs_uv.bin.h  fs_uv.sc  vs_uv.bin.h  vs_uv.sc
